--- a/styles/addPerson.css
+++ b/styles/addPerson.css
@@ -42,18 +42,23 @@
   padding: 20px;
 }
 
-input {
+.input-value {
   height: 30px;
   margin-top: 10px;
 }
 
-input,
+.input-value,
 textarea {
   width: 100%;
   border: 2px solid #4e4d4d;
   padding-left: 10px;
   border-radius: 5px;
   margin-top: 10px;
+}
+
+.file-value[type="button"] {
+  background-color: red;
+  text-align: left;
 }
 
 textarea {
